Add __BEGIN_DECLS to jail.h to keep C++ happy.

PR:		238928
Reported by:	yuri@


git-svn-id: svn+ssh://svn.freebsd.org/base/head@364970 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f